# nuVeto

./: .gitignore  .travis.yml  MANIFEST.in  README.md  a.ipynb  barr_uncertainties.py  correlated_selfveto.py  geometry.py  mceqveto.py  mu.py  pl.py  pyproject.toml  pytest.ini  selfveto.py  setup.py  tests.py  tests_selfveto.py  tests_uncorrelated_selfveto.py  uncorrelated_selfveto.py  utils.py
.github/workflows/: build_and_test.yml  dependabot.yml  publish.yml  pytest.yml
data/: sigmoid_0.75_0.1.pkl
data/d/: D_1e4.pkl
data/prpl/: step_1.pkl
examples/: conventional_numu_passingfraction.py  paper.mplstyle  plots.py  plotting.py  prompt_numu_passingfraction.py
muon_dist/src/: generate_muons.cpp
nuVeto/: __init__.py  barr_uncertainties.py  mu.py  nuveto.py  selfveto.py  utils.py
nuVeto/data/corsika/: nu_all_maxmu.pkl  nu_all_summu.pkl  num_maxmu.pkl  num_summu.pkl
nuVeto/data/decay_distributions/: D+_numu.npz  K+_numu.npz
nuVeto/data/mmc/: ice_allm97.pklz  ice_bb.pklz  water_allm97.pklz  water_bb.pklz
nuVeto/data/prpl/: ice_allm97_sigmoid_0.75_0.1.pkl  ice_allm97_sigmoid_0.75_0.25.pkl  ice_allm97_step_0.75.pkl  ice_allm97_step_1.pkl  ice_bb_step_1.pkl  sigmoid_0.75_0.1.pkl  sigmoid_0.75_0.25.pkl  step_0.75.pkl  water_allm97_step_1.pkl  water_bb_step_1.pkl
nuVeto/examples/: conventional_numu_passingfraction.py  plots.py  prompt_numu_passingfraction.py
nuVeto/resources/mu/: mu.py  pl.py  reaching.py
nuVeto/resources/mu/mmc/: ice_allm97.pklz  ice_bb.pklz  water_allm97.pklz  water_bb.pklz
nuVeto/resources/pythia/: pythia_decay.py
nuVeto/tests/: test_app.py
paper/: make.py  paper.mplstyle  paper.py  plot.py
paper/figs_for_readme/: fluxes_100.eps
resources/mu/: mu.py
resources/muon_dist/src/: generate_muons.cpp
resources/pythia/: pythia_decay.py
scripts/mu/: mu.py  pl.py  reaching.py
scripts/pythia/: pythia_decay.py
src/nuVeto/: __init__.py  mu.py  nuveto.py  uncertainties.py  utils.py
src/nuVeto/data/corsika/: eff_maxmu.npz  eff_summu.npz  num_maxmu.npz  num_summu.npz
src/nuVeto/data/decay_distributions/: D0_numu.npz  Ds_numu.npz  K0L_numu.npz
src/nuVeto/examples/: __init__.py  plots.py
src/nuVeto/tests/: test_app.py
tests/: test_app.py  tests.py
(+14 files in other folders)
